# portfolio

./: README.md  pyproject.toml  requirements.txt
dataset/: mnist.py
deep_learning_from_scratch/: train_mnist_mlp.ipynb
deep_learning_from_scratch/models/: multilayer_perceptron.py
deep_learning_from_scratch/utils/: activation_functions.py  layers.py  loss_functions.py  metric.py  normalization.py
